# prime

./: .gitignore  README.md  pyproject.toml
data/: simple_four_bus.json  unicorn_56.json
data/unicorn_56_import/: unicorn_56.mat
data/unicorn_56_import/gridtimeseries/: pvproduction.csv  t.csv
feedback_opt/: simulation.py
feedback_opt/optimizers/: __init__.py  optimizer_base.py  optimizer_dual_h.py  optimizer_dual_h_proximal.py  optimizer_dual_y.py  optimizer_dual_y_proximal.py  optimizer_primal.py
feedback_opt/systems/: __init__.py  system_base.py  system_electrical.py  system_non_linear.py
feedback_opt/utils/: __init__.py  utils_constraints.py  utils_electric.py  utils_pandas.py  utils_plotting.py
figures/: create_figures.py  fig_feasibility.py  fig_interconnection.afdesign  fig_meas_noise.py  fig_nonconvex_toy.py  fig_power_grid.afdesign  fig_prime_h.afdesign  fig_prime_y.afdesign  fig_unicorn.py  fig_unicorn_noise.py
notebooks/: import_unicorn_56.ipynb  test_toy_1d.ipynb  test_toy_nonconvex.ipynb  test_unicorn_primal.ipynb  test_unicorn_proximal.ipynb
scenarios/: scenario_1d.py  scenario_convex_toy.py  scenario_nonconvex_toy.py  scenario_unicorn.py  scenario_unicorn_noise.py
