[tool.poetry]
name = "feedback-opt"
version = "1.0.0"
description = ""
authors = ["NicholasBehr <github.fc3r26vy@mailalias.me>"]
readme = "README.md"

[tool.poetry.scripts]
create_figures = "figures.create_figures:create_figures"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
pandapower = "^2.14.11"
cvxpy = "^1.5.3"
numba = "^0.60.0"
matplotlib = "^3.9.2"
igraph = "^0.11.6"
tqdm = "^4.67.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.5"
black = "^24.8.0"
pylint = "^3.2.7"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target_version = ['py312']

[tool.isort]
profile = "black"
src_paths = ["feedback_opt"]

[tool.pylint.FORMAT]
output-format = "colorized"
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    # Disable failure for TODO items in the codebase (code will always have TODOs).
    "fixme",
    "missing-docstring",
]
