[project]
name = "feedback-opt"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cvxpy>=1.6.4",
    "igraph>=0.11.8",
    "matplotlib>=3.10.1",
    "numba>=0.61.0",
    "pandapower>=3.0.0",
    "pandas>=2.2.3",
    "tqdm>=4.67.1",
]

[project.scripts]
create_figures = "figures.create_figures:create_figures"

[dependency-groups]
dev = [
    "jupyterlab>=4.3.6",
    "ruff>=0.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["feedback_opt"]

[tool.ruff]
exclude = [".venv"]
line-length = 100
target-version = "py312"